# iot-safe-middleware

./: CMakeLists.txt  Makefile  README.md
.github/: CODEOWNERS
example/: CMakeLists.txt
example/include/: util.h
example/src/: simpledemo.cpp
examples/: CMakeLists.txt
examples/jwtexample/: CMakeLists.txt
examples/jwtexample/inc/: openssl-util.h  sim-access-util.h
examples/jwtexample/src/: jwtexample.cpp  openssl-util.cpp  sim-access-util.cpp
examples/simpledemo/: CMakeLists.txt
examples/simpledemo/src/: simpledemo.cpp  util.cpp
external_libs/: CMakeLists.txt
external_libs/CppUTest/: CMakeLists.txt
iotsafelib/: CMakeLists.txt
iotsafelib/common/: CMakeLists.txt
iotsafelib/common/inc/: Applet.h  ROT.h  SEInterface.h
iotsafelib/common/src/: Applet.cpp  ROT.cpp  SEInterface.cpp
iotsafelib/platform/: CMakeLists.txt
iotsafelib/platform/modem/: CMakeLists.txt
iotsafelib/platform/modem/inc/: ATInterface.h  GenericModem.h  LSerial.h  Serial.h
iotsafelib/platform/modem/src/: ATInterface.cpp  GenericModem.cpp  LSerial.cpp  Serial.cpp
tests/: README.md
tests/unit/: CMakeLists.txt
tests/unit/include/: rot_tests_helper.h
tests/unit/src/: rot_tests_helper.c  rot_tests_unit_applet_tests.cpp  rot_tests_unit_runner.cpp
